--- a/games/suggestions/templates/suggestions/layout.html
+++ b/games/suggestions/templates/suggestions/layout.html
@@ -4,9 +4,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="{% static 'suggestions/layout.css' %}">
+    {% block style %}
+    {% endblock %}
+    {% block script %}
+    {% endblock %}
+
 </head>
 <body>
-    <h1>Yeet</h1>
+
+    {% block body%}
+
+    {% endblock %}
+
 </body>
 </html>
