--- a/games/suggestions/templates/suggestions/index.html
+++ b/games/suggestions/templates/suggestions/index.html
@@ -40,6 +40,33 @@
                 </button>
             </div>
         </div>
-        
+    </div>
+
+    <div class="third-multi">
+        <div class="multi-choice">
+
+            <p class="multi-text">Are you looking for a, primarily,<br> Competitive or Co-op Experience?</p>
+
+            <div class="competitive-button">
+                <button>
+                    Competitive
+                </button>
+            </div>
+
+            <div class="coop-button">
+                <button>
+                    Co-op
+                </button>
+            </div>
+        </div>
+    </div>
+
+    <div class="tags-canvas">
+        <p class="canvas-text">
+            Now select the tags you like 
+        </p>
+        <div class="tags-grid">
+
+        </div>
     </div>
 {% endblock %}
