Rounded up the tags

--- a/games/suggestions/templates/suggestions/index.html
+++ b/games/suggestions/templates/suggestions/index.html
@@ -68,5 +68,9 @@
         <div class="tags-grid">
 
         </div>
+
+        <div class="submitter-parent">
+            
+        </div>
     </div>
 {% endblock %}
