--- a/games/suggestions/static/suggestions/index.css
+++ b/games/suggestions/static/suggestions/index.css
@@ -8,7 +8,7 @@ html {
 body {
     background-image: url('initial_background.jpg');
     background-color: #121212;
-    background-size: 100% auto;
+    background-size: cover;
     background-repeat: no-repeat;
     background-attachment: fixed;
     font-family: 'Varela';
@@ -232,6 +232,7 @@ body {
 
 .selected {
     border-color: #BB86FC;
+    opacity: 87%;
 }
 
 
