Started game loading

--- a/games/suggestions/templates/suggestions/index.html
+++ b/games/suggestions/templates/suggestions/index.html
@@ -73,4 +73,10 @@
             
         </div>
     </div>
+
+    <div class="fourth">
+        <div class="games">
+            
+        </div>
+    </div>
 {% endblock %}
