--- a/games/suggestions/static/suggestions/index.css
+++ b/games/suggestions/static/suggestions/index.css
@@ -164,7 +164,7 @@ body {
 }
 
 .tags-canvas {
-    height: 100vh;
+    min-height: 100vh;
     width: 100vw;
     font-size: 2rem;
     justify-content: center;
@@ -236,7 +236,20 @@ body {
     opacity: 87%;
 }
 
+.fourth {
+    min-height: 100vh;
+    width: 100vw;
+    justify-content: center;
+    max-width: 100%;
+    float: left;
+}
 
+.games {
+    margin-top: 30vh;
+    margin-bottom: 10vh;
+    margin-left: 10vw;
+    margin-right: 10vw;
+}
 
 
 
