--- a/games/suggestions/static/suggestions/index.css
+++ b/games/suggestions/static/suggestions/index.css
@@ -252,24 +252,85 @@ body {
 }
 
 .game {
+    justify-content: center;
     margin-bottom: 5vh;
     min-height: 100vh;
     margin-left: 15vw;
     margin-right: 15vw;
+    
 }
 
 .game-name {
     font-size: 3rem;
     opacity: 87%;
+    text-align: center;
+}
+
+.image-parent {
+    display: flex;
+    justify-content: center;
+    width: 100%;
+    max-width: 100%;
+    margin: 2vh;
+}
+.image-child {
+    min-width: 30vw;
+    max-width: 30vw;
 }
 
 .game-price {
+    text-align: center;
     opacity: 87%;
     font-size: 2rem;
 }
 
 .game-description {
     opacity: 60%;
+    text-align: center;
+}
+
+.arrow-parent {
+    margin-top: 35vh;
+    max-width: 100%;
+    justify-content: center;
+    margin-bottom: 0;
+    flex: 0 0 auto;
+    
+}
+
+.arrow-child {
+    flex: 0 0 auto;
+    justify-content: center;
+    max-width: 5%;
+    margin-left: 47.5%;
+}
+
+.arrow-child:hover {
+    cursor: pointer;
+}
+
+.back {
+    margin-top: 35vh;
+    text-align: center;
+    margin-bottom: 0;
+    border: solid;
+    border-color: white;
+    border-width: 0.2rem;;
+    opacity: 87%;
+    border-radius: 2rem;
+    padding: 1rem;
+    color: white;
+    font-size: 2rem;
+    font-family: inherit;
+    -webkit-transition: border-color 200ms ease-in;
+    -moz-transition: border-color 200ms ease-in; 
+    -o-transition: border-color 200ms ease-in; 
+    transition: border-color 200ms ease-in;
+}
+
+.back:hover {
+    cursor: pointer;
+    border-color: #BB86FC;
 }
 
 
@@ -277,6 +338,18 @@ body {
 @media only screen and (max-width:1080px) {
     .tag-card {
         font-size: 1.5rem;
+    }
+    .arrow-child {
+        max-width: 15%;
+    }
+    .arrow-parent {
+        margin-top: 20vh;
+    }
+    .image-parent {
+        min-width: 50vw;
+    }
+    .image-child {
+        margin-right: 10vw; 
     }
 }
 
