--- a/games/suggestions/static/suggestions/index.css
+++ b/games/suggestions/static/suggestions/index.css
@@ -52,7 +52,7 @@ body {
     -moz-transition: border-color 150ms ease-in; 
     -o-transition: border-color 150ms ease-in; 
     transition: border-color 150ms ease-in;
-    border-width: 0.2rem;;
+    border-width: 0.2rem;
     opacity: 87%;
     border-radius: 2rem;
     padding: 1rem;
@@ -206,7 +206,6 @@ body {
 }
 
 .tag-card:hover {
-    border-color: #BB86FC;
     cursor: pointer;
 }
 
@@ -250,6 +249,7 @@ body {
 }
 
 .games {
+    
     margin-top: 30vh;
     margin-bottom: 10vh;
     margin-left: 10vw;
@@ -257,12 +257,14 @@ body {
 }
 
 .game {
+    display: flex;
     justify-content: center;
+    align-items: center;
     margin-bottom: 5vh;
     min-height: 100vh;
+    max-height: 100vh;
     margin-left: 15vw;
-    margin-right: 15vw;
-    
+    margin-right: 15vw; 
 }
 
 .game-name {
@@ -295,18 +297,17 @@ body {
 }
 
 .arrow-parent {
-    margin-top: 35vh;
+    position: relative;
+    bottom: 0;
     max-width: 100%;
     justify-content: center;
-    margin-bottom: 0;
     flex: 0 0 auto;
-    
 }
 
 .arrow-child {
     flex: 0 0 auto;
     justify-content: center;
-    max-width: 5%;
+    max-width: 3vw;
     margin-left: 47.5%;
 }
 
@@ -315,7 +316,7 @@ body {
 }
 
 .back {
-    margin-top: 35vh;
+    margin-top: 30vh;
     text-align: center;
     margin-bottom: 0;
     border: solid;
@@ -338,6 +339,13 @@ body {
     border-color: #BB86FC;
 }
 
+
+/* Fixing the stupid bug that CSS has on the hover attribute on touch screens I hate doing this seriously fuck front end developing */
+@media only screen and (min-width:1366px) {
+    .tag-card:hover {
+        border-color: #BB86FC
+    }
+}
 
 /* Medium sized Responsiveness */
 @media only screen and (max-width:1008px) {
@@ -375,6 +383,10 @@ body {
 
 /*Mobile Responsiveness*/
 @media only screen and (max-width:479px) {
+    body {
+        background-image: url('mobile_background.jpg');
+    }
+
     .intro .welcome {
         font-size: 2rem;
     }
@@ -382,6 +394,7 @@ body {
         font-size: 1rem;
     }
     .started-button button{
+        border-width: 0.1rem;
         font-size: 1.5rem;
     }
     .second {
@@ -395,6 +408,7 @@ body {
     }
     
     .multiplayer-button button, .singleplayer-button button {
+        border-width: 0.1rem;
         font-size: 1.3rem;
     }
 
@@ -403,8 +417,123 @@ body {
     }
 
     .competitive-button button, .coop-button button {
+        border-width: 0.1rem;
         font-size: 1.3rem;
     }
+
+    .tags-canvas {
+        justify-content: center;
+        max-width: 100%;
+        float: left;
+    }
+    
+    .canvas-text {
+        opacity: 87%;
+        font-size: 2rem;
+        text-align: center;
+    }
+    
+    .tags-grid {
+        display: grid;
+        grid-gap: 0.5rem;
+        justify-content: space-evenly;
+        grid-template-columns:  auto auto auto;
+    }
+    
+    .tag-card {
+        border-width: 0.1rem;
+        font-size: .6rem;
+        border-radius: 1.5rem;
+        text-overflow: ellipsis;
+    }
+
+    .submitter {
+        width: 50vw;
+        border-width: 0.1rem;
+        font-size: 1.5rem;
+    }
+
+    .games {
+        margin-top: 30vh;
+        margin-bottom: 10vh;
+        margin-left: 0;
+        margin-right: 0;
+    }
+    
+    .game {
+        justify-content: center;
+        margin-bottom: 5vh;
+        min-height: 100vh;
+        max-height: 100vh;
+        
+    }
+
+    .content-parent {
+        max-height: 100vh;
+    }
+    
+    .game-name {
+        margin: 0.5rem;
+        font-size: 1.5rem;
+        opacity: 87%;
+        text-align: center;
+    }
+    
+    .image-parent {
+        display: flex;
+        justify-content: center;
+        width: 100%;
+        max-width: 100%;
+        margin: 2vh;
+    }
+    .image-child {
+        min-width: 30vw;
+        max-width: 80vw;
+    }
+    
+    .game-price {
+        text-align: center;
+        opacity: 87%;
+        font-size: 1rem;
+    }
+    
+    .game-description {
+        opacity: 60%;
+        text-align: center;
+        font-size: 0.7rem;
+        padding: 5vw;
+    }
+    
+    .arrow-parent {
+        position: relative;
+        bottom: 0;
+        max-width: 100%;    
+    }
+    
+    .arrow-child {
+        flex: 0 0 auto;
+        justify-content: center;
+        width: 5vw;
+        margin-left: 47.5%;
+    }
+    
+    .arrow-child:hover {
+        cursor: pointer;
+    }
+    
+    .back {
+        margin-top: 30vh;      
+        border-width: 0.1rem;;
+        font-size: 1rem;
+        margin-left: 5vw;
+        margin-right: 5vw;
+    }
+    
+    .back:hover {
+        cursor: pointer;
+        border-color: #BB86FC;
+    }
+
 }
 
 
