More styling, and cleaning css

--- a/games/suggestions/templates/suggestions/index.html
+++ b/games/suggestions/templates/suggestions/index.html
@@ -17,7 +17,7 @@
         </div>
 
         <div class="started-button">
-            <button>
+            <button class="started-button-button">
                 Get Started
             </button>
         </div>
@@ -29,13 +29,13 @@
             <p class="player-text">Are you looking for a, primarily,<br> Multiplayer or Single Player Experience?</p>
 
             <div class="multiplayer-button">
-                <button>
+                <button class="multiplayer-button-button">
                     Multiplayer
                 </button>
             </div>
 
             <div class="singleplayer-button">
-                <button>
+                <button class="singleplayer-button-button">
                     Single Player
                 </button>
             </div>
@@ -48,13 +48,13 @@
             <p class="multi-text">Are you looking for a, primarily,<br> Competitive or Co-op Experience?</p>
 
             <div class="competitive-button">
-                <button>
+                <button class="competitive-button-button">
                     Competitive
                 </button>
             </div>
 
             <div class="coop-button">
-                <button>
+                <button class="coop-button-button">
                     Co-op
                 </button>
             </div>
