--- a/games/suggestions/templates/suggestions/index.html
+++ b/games/suggestions/templates/suggestions/index.html
@@ -65,6 +65,10 @@
         <p class="canvas-text">
             Now select the tags you like 
         </p>
+
+        <p class="tags-advice">
+            The more you select the more accurate the suggestions will be
+        </p>
         <div class="tags-grid">
 
         </div>
