Removed unnecessary logging and lowered border-width

--- a/suggestions/static/suggestions/index.css
+++ b/suggestions/static/suggestions/index.css
@@ -329,7 +329,7 @@ body {
     margin-bottom: 0;
     border: solid;
     border-color: white;
-    border-width: 0.2rem;;
+    border-width: 0.1rem;
     opacity: 87%;
     border-radius: 2rem;
     padding: 1rem;
