Http method security check and meta tags

--- a/suggestions/templates/suggestions/layout.html
+++ b/suggestions/templates/suggestions/layout.html
@@ -4,6 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Don't know what to play?
+    Answer a couple of questions, select a couple of tags
+    and we will suggest you some games!">
     <title>What Should I Play</title>
     {% block style %}
     {% endblock %}
