--- a/suggestions/templates/suggestions/index.html
+++ b/suggestions/templates/suggestions/index.html
@@ -9,7 +9,7 @@
 {% block body %}
     <div class="first">
         <div class="intro">
-            <p class='welcome'>Welcome to What Should I Play</p>
+            <h1 class='welcome'>Welcome to What Should I Play</h1>
             <p class='welcome2'>Don't know what to play? <br>
             Answer a couple of questions, select a couple of tags <br>
             and we will suggest you some games!
