Tags warning update

--- a/suggestions/templates/suggestions/index.html
+++ b/suggestions/templates/suggestions/index.html
@@ -67,7 +67,7 @@
         </p>
 
         <p class="tags-advice">
-            The more you select the more accurate the suggestions will be
+            The more related tags you select the more accurate the suggestions will be
         </p>
         <div class="tags-grid">
 
