--- a/suggestions/templates/suggestions/layout.html
+++ b/suggestions/templates/suggestions/layout.html
@@ -12,7 +12,7 @@
     {% endblock %}
     {% block script %}
     {% endblock %}
-
+    <script data-ad-client="ca-pub-2774840060374052" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 </head>
 <body>
 
