--- a/suggestions/static/suggestions/index.css
+++ b/suggestions/static/suggestions/index.css
@@ -266,6 +266,7 @@ body {
 }
 
 .game {
+    position: relative;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -287,11 +288,15 @@ body {
     justify-content: center;
     width: 100%;
     max-width: 100%;
-    margin: 2vh;
+    margin-top: 2vh;
+    margin-bottom: 2vh;
 }
+
+
 .image-child {
-    min-width: 30vw;
-    max-width: 30vw;
+    margin-left: auto;
+    margin-right: auto;
+    min-width: 20vw;
 }
 
 .game-price {
@@ -305,19 +310,28 @@ body {
     text-align: center;
 }
 
+.ad-div {
+    width: 100%;
+    height: 15vh;
+/* reserved for when adsense accepts */
+}
+
 .arrow-parent {
-    position: relative;
-    bottom: 0;
-    max-width: 100%;
-    justify-content: center;
+    position: absolute;
+    bottom: 5vh;
+    left: 0;
+    width: 100%;
+
+    text-align: center;
     flex: 0 0 auto;
 }
 
 .arrow-child {
+    display: inline-block;
     flex: 0 0 auto;
-    justify-content: center;
+    margin: 0 auto;
+    display: block;
     max-width: 3vw;
-    margin-left: 47.5%;
 }
 
 .arrow-child:hover {
@@ -356,44 +370,6 @@ body {
     }
 }
 
-/* Medium sized Responsiveness */
-@media only screen and (max-width:1008px) {
-    .intro .welcome {
-        font-size: 2rem;
-    }
-
-    .intro .welcome2 {
-        font-size: 1.5rem;
-    }
-
-    .player-choice {
-        margin-top: 20vh;
-        margin-bottom: 15vh;
-        margin-left: 10vw;
-        margin-right: 10vw
-    }
-
-    .tag-card {
-        font-size: 1.5rem;
-    }
-
-    .arrow-child {
-        max-width: 15%;
-        margin-left: 40%;
-    }
-
-    .arrow-parent {
-        margin-top: 20vh;
-    }
-
-    .image-parent {
-        min-width: 50vw;
-    }
-
-    .image-child {
-        margin-right: 10vw; 
-    }
-}
 
 /*Mobile Responsiveness*/
 @media only screen and (max-width:479px) {
@@ -486,8 +462,7 @@ body {
     .game {
         justify-content: center;
         margin-bottom: 5vh;
-        min-height: 100vh;
-        max-height: 100vh;
+        height: 100vh;
         
     }
 
@@ -502,13 +477,11 @@ body {
     
     .image-parent {
         display: flex;
-        justify-content: center;
         width: 100%;
-        max-width: 100%;
-        margin: 2vh;
     }
+
     .image-child {
-        min-width: 30vw;
+        min-width: 25vw;
         max-width: 80vw;
     }
     
@@ -520,16 +493,10 @@ body {
         font-size: 0.7rem;
         padding: 5vw;
     }
-    
-    .arrow-parent {
-        position: relative;
-        bottom: 0;
-        max-width: 100%;    
-    }
+
     
     .arrow-child {
-        width: 5vw;
-        margin-left: 47.5%;
+        max-width: 13vw;
     }
     
     .back {
