--- a/suggestions/templates/suggestions/index.html
+++ b/suggestions/templates/suggestions/index.html
@@ -7,6 +7,10 @@
 <script src="{% static 'suggestions/script.js' %}"></script>
 {% endblock %}
 {% block body %}
+    <ul class="navbar">
+        <li><a href="">About</a></li>
+        <li><a href="">Contact</a></li>
+    </ul>
     <div class="first">
         <div class="intro">
             <h1 class='welcome'>Welcome to What Should I Play</h1>
