--- a/suggestions/templates/suggestions/index.html
+++ b/suggestions/templates/suggestions/index.html
@@ -8,9 +8,15 @@
 {% endblock %}
 {% block body %}
     <ul class="navbar">
-        <li><a href="">About</a></li>
-        <li><a href="">Contact</a></li>
+        <li class='home-icon'><img src="../../static/suggestions/homeicon.png" alt="Home"></li>
+        <li><a class='about-button'>About</a></li>
+        <li><a class='contact-button'>Contact</a></li>
     </ul>
+    <div class="about-view">
+        <p class="about-text">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam praesentium nulla aspernatur nisi. Velit architecto blanditiis numquam, natus debitis laborum, hic commodi ex atque corrupti pariatur quam ea earum? Dolor.
+        </p>
+    </div>
     <div class="first">
         <div class="intro">
             <h1 class='welcome'>Welcome to What Should I Play</h1>
