--- a/suggestions/static/suggestions/index.css
+++ b/suggestions/static/suggestions/index.css
@@ -70,7 +70,42 @@ body {
 
 .about-view {
     height: 100vh;
-    background-color: #121212;
+    margin-top: 7vh;
+    padding-top: 5vh;
+
+    -webkit-animation: fadein 3s; /* Safari, Chrome and Opera > 12.1 */
+       -moz-animation: fadein 3s; /* Firefox < 16 */
+        -ms-animation: fadein 3s; /* Internet Explorer */
+         -o-animation: fadein 3s; /* Opera < 12.1 */
+            animation: fadein 3s;
+}
+
+.about-text {
+    width: 50%;
+    margin-left: 25%;
+    margin-right: 25%;
+    color: white;
+    opacity: 87%;
+}
+
+.about-intro {
+    padding: 2rem;
+    background-color:  rgb(40, 40, 40);
+    border-radius: 1rem;
+}
+
+.about-works {
+    margin-top: 3vh;
+    padding: 2rem;
+    background-color:  rgb(40, 40, 40);
+    border-radius: 1rem;
+}
+
+.about-tips {
+    margin-top: 3vh;
+    padding: 2rem;
+    background-color:  rgb(40, 40, 40);
+    border-radius: 1rem;
 }
 
 .first {
