--- a/suggestions/templates/suggestions/index.html
+++ b/suggestions/templates/suggestions/index.html
@@ -40,6 +40,21 @@
             </div>
         </div>
     </div>
+
+    <div class="contact-view">
+        <div class="contact-text">
+            <div class="contact-intro">
+                <h2>
+                    How do I contact you?
+                </h2>
+                <p>
+                    If you have any questions, suggestions or anything to say to me, feel free to contact me at fabio.david.contato@gmail.com
+                </p>
+                
+            </div>
+        </div>
+        
+    </div>
     <div class="first">
         <div class="intro">
             <h1 class='welcome'>Welcome to What Should I Play</h1>
