--- a/suggestions/static/suggestions/index.css
+++ b/suggestions/static/suggestions/index.css
@@ -292,7 +292,7 @@ body {
 }
 
 .tags-canvas {
-    min-height: 100vh;
+    height: 100vh;
     width: 100vw;
     font-size: 2rem;
     justify-content: center;
@@ -313,7 +313,8 @@ body {
 }
 
 .tags-grid {
-    margin: 10vh;
+    margin-top: 5vh;
+    margin-bottom: 5vh;
     display: grid;
     grid-gap: 2rem;
     justify-content: space-evenly;
@@ -326,7 +327,7 @@ body {
     width: 15vw;
     border-style: solid;
     border-color: white;
-    border-radius: 2rem;
+    border-radius: 1rem;
     text-align: center;
     border-width: 0.15rem;
     -webkit-transition: border-color 200ms ease-in;
