Added analytics tag

--- a/suggestions/templates/suggestions/layout.html
+++ b/suggestions/templates/suggestions/layout.html
@@ -13,6 +13,16 @@
     {% block script %}
     {% endblock %}
     <script data-ad-client="ca-pub-2774840060374052" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-CVR15FPEY7"></script>
+    <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-CVR15FPEY7');
+    </script>
+    
 </head>
 <body>
 
