Added adcash meta tag

--- a/suggestions/templates/suggestions/layout.html
+++ b/suggestions/templates/suggestions/layout.html
@@ -23,6 +23,7 @@
     gtag('config', 'G-CVR15FPEY7');
     </script>
     
+    <meta name="a.validate.01" content="06066806c7a6fa0329d3b5042984f0e90952" />
 </head>
 <body>
 
