--- a/suggestions/static/suggestions/index.css
+++ b/suggestions/static/suggestions/index.css
@@ -403,6 +403,10 @@ body {
     margin-right: 15vw; 
 }
 
+.content-parent {
+    margin-bottom: 20vh;
+}
+
 .game-name {
     font-size: 2.5rem;
     opacity: 87%;
@@ -436,11 +440,6 @@ body {
     text-align: center;
 }
 
-.ad-div {
-    width: 100%;
-    height: 15vh;
-/* reserved for when adsense accepts */
-}
 
 .arrow-parent {
     position: absolute;
