--- a/suggestions/templates/suggestions/index.html
+++ b/suggestions/templates/suggestions/index.html
@@ -38,6 +38,9 @@
                     In order to get games that you are actually looking for, you should select tags that are possible to coexist in the same game, otherwise, if you, for example, select "Driving" and "Anime", since there are no decent games (yet) that have both characteristics, it's gonna give you either driving or anime games.
                 </p>
             </div>
+
+            <div id="awn-z3960299"></div>
+
         </div>
     </div>
 
