--- a/suggestions/static/suggestions/index.css
+++ b/suggestions/static/suggestions/index.css
@@ -210,6 +210,12 @@ body {
     margin-left: 10vw;
     margin-right: 10vw;
 }
+.control {
+    margin-left: 20%;
+    margin-right: 20%;
+    justify-content: center;
+}
+
 
 .multiplayer-button button, .singleplayer-button button {
     opacity: 60%;
