--- a/suggestions/templates/suggestions/index.html
+++ b/suggestions/templates/suggestions/index.html
@@ -39,7 +39,7 @@
                 </p>
             </div>
 
-            <div id="awn-z3960299"></div>
+
 
         </div>
     </div>
@@ -55,7 +55,11 @@
                 </p>
                 
             </div>
+
+            
         </div>
+
+        
         
     </div>
     <div class="first">
@@ -91,6 +95,9 @@
                 </button>
             </div>
         </div>
+
+        
+        
     </div>
 
     <div class="third-multi">
@@ -127,6 +134,11 @@
         <div class="submitter-parent">
             
         </div>
+
+    </div>
+    
+    <div class="control">
+        <div id="awn-z3960299"></div>
     </div>
 
     <div class="fourth">
