--- a/suggestions/templates/suggestions/index.html
+++ b/suggestions/templates/suggestions/index.html
@@ -64,7 +64,7 @@
     </div>
     <div class="first">
         <div class="intro">
-            <h1 class='welcome'>Welcome to What Should I Play</h1>
+            <h1 class='welcome'>Welcome to <br class='mobile-br'>What Should I Play</h1>
             <p class='welcome2'>Don't know what to play? <br>
             Answer a couple of questions, select a couple of tags <br>
             and we will suggest you some games!
