--- a/suggestions/templates/suggestions/index.html
+++ b/suggestions/templates/suggestions/index.html
@@ -94,6 +94,11 @@
                     Single Player
                 </button>
             </div>
+
+            <div class="player-control">
+                <div id="awn-z3978951"></div>
+            </div>
+            
         </div>
 
         
