--- a/suggestions/templates/suggestions/index.html
+++ b/suggestions/templates/suggestions/index.html
@@ -124,27 +124,33 @@
         </div>
     </div>
 
-    <div class="tags-canvas">
-        <p class="canvas-text">
-            Now select the tags you like 
-        </p>
+    <div class="tags-div">
 
-        <p class="tags-advice">
-            The more related tags you select the more accurate the suggestions will be
-        </p>
-        <div class="tags-grid">
+    
+        <div class="tags-canvas">
+            <p class="canvas-text">
+                Now select the tags you like 
+            </p>
+
+            <p class="tags-advice">
+                The more related tags you select the more accurate the suggestions will be
+            </p>
+            <div class="tags-grid">
+
+            </div>
+
+            <div class="submitter-parent">
+                
+            </div>
 
         </div>
 
-        <div class="submitter-parent">
-            
+        <div class="control">
+            <div id="awn-z3979063"></div>
         </div>
-
     </div>
     
-    <div class="control">
-        <div id="awn-z3960299"></div>
-    </div>
+    
 
     <div class="fourth">
         <div class="games">
