--- a/suggestions/templates/suggestions/index.html
+++ b/suggestions/templates/suggestions/index.html
@@ -124,31 +124,32 @@
         </div>
     </div>
 
-    <div class="tags-div">
 
     
-        <div class="tags-canvas">
-            <p class="canvas-text">
-                Now select the tags you like 
-            </p>
+    <div class="tags-canvas">
+        <p class="canvas-text">
+            Now select the tags you like 
+        </p>
 
-            <p class="tags-advice">
-                The more related tags you select the more accurate the suggestions will be
-            </p>
-            <div class="tags-grid">
-
-            </div>
-
-            <div class="submitter-parent">
-                
-            </div>
+        <p class="tags-advice">
+            The more related tags you select the more accurate the suggestions will be
+        </p>
+        <div class="tags-grid">
 
         </div>
 
-        <div class="control">
+        <div class="submitter-parent">
+            
+        </div>
+
+    </div>
+
+    <div class="tags-control">
+        <div class="tags-control-2">
             <div id="awn-z3979063"></div>
         </div>
     </div>
+    
     
     
 
@@ -157,4 +158,6 @@
             
         </div>
     </div>
+
+    
 {% endblock %}
