--- a/suggestions/templates/suggestions/layout.html
+++ b/suggestions/templates/suggestions/layout.html
@@ -31,7 +31,7 @@
 
     {% endblock %}
 
-    <!--Script for 4dcash below get games-->
+    <!--Script for 4dcash-->
     
     
     <script data-cfasync="false" type="text/javascript">
@@ -41,10 +41,6 @@
         <a href="https://discovernative.com/al/visit.php?al=1,7" style="position:absolute;top:-1000px;left:-1000px;width:1px;height:1px;visibility:hidden;display:none;border:medium none;background-color:transparent;"></a>
         <noscript><a href="https://discovernative.com/al/visit.php?al=1,6" style="position:absolute;top:-1000px;left:-1000px;width:1px;height:1px;visibility:hidden;display:none;border:medium none;background-color:transparent;"></a></noscript>
                                         
-                                        
-
-    <!--Script for 4dcash below Back to start-->
-   
-                                        
+                                                                                
 </body>
 </html>
