--- a/suggestions/templates/suggestions/layout.html
+++ b/suggestions/templates/suggestions/layout.html
@@ -8,6 +8,7 @@
     Answer a couple of questions, select a couple of tags
     and we will suggest you some games!">
     <title>What Should I Play</title>
+    <link rel="icon" href="{% static 'suggestions/favicon.ico' %}">
     {% block style %}
     {% endblock %}
     {% block script %}
